--- a/templates/error.html
+++ b/templates/error.html
@@ -37,8 +37,11 @@
             {% endif %}
 
             <div class="mt-4 text-center">
-                <a href="{{ url_for('logout') }}" class="btn btn-primary">
-                    <i class="fas fa-redo-alt"></i> Relaunch Application
+                <a href="{{ url_for('views.logout') }}" class="btn btn-primary">
+                    <i class="fas fa-redo"></i> Relaunch Application
+                </a>
+                <a href="https://www.precisehbr.com" class="btn btn-secondary" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> Visit Website
                 </a>
             </div>
         </div>
