--- a/templates/permission_error.html
+++ b/templates/permission_error.html
@@ -85,7 +85,7 @@
                         </div>
 
                         <div class="mt-4 text-center">
-                            <a href="{{ url_for('index') }}" class="btn btn-primary">
+                            <a href="{{ url_for('views.index') }}" class="btn btn-primary">
                                 <i class="fas fa-home"></i> 返回首页
                             </a>
                             <button onclick="location.reload()" class="btn btn-outline-secondary">
